@@ -233,7 +233,7 @@ diskfs_get_directs (struct node *dp,
   allocsize = bufsiz ? round_page (bufsiz) : vm_page_size * 4;
   if (allocsize > *datacnt)
     {
-      vm_allocate (mach_task_self (), (vm_address_t *) data, allocsize, 1);
+      *data = mmap (0, allocsize, PROT_READ|PROT_WRITE, MAP_ANON, 0, 0);
       ouralloc = 1;
     }
 
