@@ -1,6 +1,11 @@
 1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* isofs.h: Add #include <sys/mman.h> for munmap decl.
+	
+1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* lookup.c (diskfs_get_directs): Use mmap instead of vm_allocate.
+	* pager.c (pager_read_page): Likewise.
 
 1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
 
